# Adaptive-Deep-Networks

./: .gitignore  ADN_paper.md  AGENTS.md  Adaptive_Deep_Networks_Final.md  Adaptive_Deep_Networks_Query_Optimization_REVISED.md  Adaptive_Deep_Networks_TurboQuant.md  FULL_CITATION_AUDIT.md  MATDO.md  Makefile  PROJECT_ORGANIZATION.md  QASP_GAP_ANALYSIS.md  QASP_paper.aux  QASP_paper.tex  QUICKSTART.sh  README.md  README_FOR_BEGINNERS.md  SPEC.md  colab.ipynb  matdo-e_paper.md  matdo-e_revised_paper.md  matdo-e_revised_paper.tex  plan.md  prd.json  prism_experimental_design.md  prism_paper.tex  prism_revised_paper.md  prism_revision_guide.md  progress.txt  pyproject.toml  requirements.txt
MATDO-new/: README.md  pyproject.toml
MATDO-new/configs/: default.yaml
MATDO-new/configs/experiments/: default.yaml  math_verification.yaml  phase3_verification.yaml
MATDO-new/configs/inference/: default.yaml  phase3_verification.yaml
MATDO-new/matdo_new/: __init__.py  repo_imports.py
MATDO-new/matdo_new/apps/: __init__.py  generate.py  run_experiments.py
MATDO-new/matdo_new/experiments/: __init__.py  baselines.py  builders.py  config.py  io.py  (+1 more)
MATDO-new/tests/: conftest.py  test_config_files.py  test_experiment_config_resolution.py  test_experiment_outputs.py  test_generate_app_live.py  test_generation_and_experiments.py  test_math_benchmark.py  test_modeling_adapters.py  test_needle_real_evaluator.py  test_online_estimation.py  test_package_layout.py  test_phase2_docs.py  test_policy.py  test_resource_theory.py  test_runtime_backend.py  test_runtime_decode.py
(+323 files in other folders)
